[gd_scene load_steps=4 format=3 uid="uid://bl4kgum5peduk"]

[ext_resource type="Script" uid="uid://4k582h7cxx8v" path="res://independant_user.gd" id="1_0urfq"]
[ext_resource type="Texture2D" uid="uid://dmsmel3whhgfw" path="res://Textures/Icons/Home.webp" id="1_e0kmr"]
[ext_resource type="Theme" uid="uid://0l4cccn1psog" path="res://Themes/Users.tres" id="2_vh4iu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0urfq")

[node name="Tasks_Rewards" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 316.0
offset_right = 3790.0
offset_bottom = 2216.0
theme_override_constants/separation = 50

[node name="Tasks" type="VBoxContainer" parent="Tasks_Rewards"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="TaskName" type="LineEdit" parent="Tasks_Rewards/Tasks"]
layout_mode = 2
theme = ExtResource("2_vh4iu")
placeholder_text = "Task Name"

[node name="Points_AddTask" type="HBoxContainer" parent="Tasks_Rewards/Tasks"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="PointCount" type="LineEdit" parent="Tasks_Rewards/Tasks/Points_AddTask"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vh4iu")
placeholder_text = "Points"

[node name="AddTask" type="Button" parent="Tasks_Rewards/Tasks/Points_AddTask"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_vh4iu")
text = "Add Task"

[node name="Tasks" type="ScrollContainer" parent="Tasks_Rewards/Tasks"]
layout_mode = 2

[node name="Tasks" type="VBoxContainer" parent="Tasks_Rewards/Tasks/Tasks"]
layout_mode = 2

[node name="Rewards" type="VBoxContainer" parent="Tasks_Rewards"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="RewardName" type="LineEdit" parent="Tasks_Rewards/Rewards"]
layout_mode = 2
theme = ExtResource("2_vh4iu")
placeholder_text = "Reward Name"

[node name="Price_AddReward" type="HBoxContainer" parent="Tasks_Rewards/Rewards"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="Price" type="LineEdit" parent="Tasks_Rewards/Rewards/Price_AddReward"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vh4iu")
placeholder_text = "Price"

[node name="AddReward" type="Button" parent="Tasks_Rewards/Rewards/Price_AddReward"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme = ExtResource("2_vh4iu")
text = "Add Reward"

[node name="Rewards" type="ScrollContainer" parent="Tasks_Rewards/Rewards"]
layout_mode = 2

[node name="Rewards" type="VBoxContainer" parent="Tasks_Rewards/Rewards/Rewards"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 3790.0
offset_bottom = 250.0

[node name="Home" type="TextureButton" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 2
action_mode = 0
texture_normal = ExtResource("1_e0kmr")
texture_pressed = ExtResource("1_e0kmr")
texture_hover = ExtResource("1_e0kmr")
texture_focused = ExtResource("1_e0kmr")
ignore_texture_size = true
stretch_mode = 5

[node name="PointCount" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "Points"

[connection signal="pressed" from="HBoxContainer/Home" to="." method="_on_home_pressed"]
